Upgraded to Kotlin 1.2.71. Upgraded to Jdk10-compliant plugins.