@@ -17,6 +17,7 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>9</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.etraveli.oss.codestyle.poms.kotlin</groupId>
@@ -74,7 +75,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Kotlin constants -->
-        <kotlin.version>1.2.61</kotlin.version>
+        <kotlin.version>1.2.71</kotlin.version>
         <kotlin.jvm.target>1.8</kotlin.jvm.target>
 
         <!-- Define code-breaking constants -->
@@ -101,6 +102,7 @@
         <maven.version>3.0</maven.version>
         <enforcer.api.version>1.4.1</enforcer.api.version>
         <jdk.version>1.8</jdk.version>
+        <javaee-api.version>8.0</javaee-api.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 
@@ -113,6 +115,7 @@
         <logback.logstash.version>5.1</logback.logstash.version>
         <xmlunit.version>2.6.0</xmlunit.version>
         <jaxb2-maven-plugin.version>2.3.1</jaxb2-maven-plugin.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
         <depgraph-maven-plugin.version>3.2.0</depgraph-maven-plugin.version>
         <depgraph.printStyleConfiguration>false</depgraph.printStyleConfiguration>
 
@@ -206,8 +209,13 @@
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
-                <version>7.0</version>
+                <version>${javaee-api.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.validation</groupId>
@@ -529,7 +537,8 @@
                     <configuration>
                         <argLine>${surefire.argLine}</argLine>
                         <parallelOptimized>true</parallelOptimized>
-                        <workingDirectory>${basedir}/target/FAILSAFE_FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
+                        <workingDirectory>${basedir}/target/FAILSAFE_FORK_DIRECTORY_${surefire.forkNumber}
+                        </workingDirectory>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     </configuration>
                     <dependencies>
@@ -1033,7 +1042,7 @@
         <profile>
             <id>jdk9</id>
             <activation>
-                <jdk>9</jdk>
+                <jdk>[9,11)</jdk>
             </activation>
 
             <build>
@@ -1059,9 +1068,7 @@
                         </configuration>
                     </plugin>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.21.0</version>
                         <configuration>
                             <argLine>
                                 --add-modules java.xml.bind
@@ -1072,6 +1079,42 @@
                 </plugins>
             </build>
 
+        </profile>
+
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <!--
+                                without forking compilation happens in the
+                                same process, so no arguments are applied
+                             -->
+                            <fork>true</fork>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--illegal-access=deny</argLine>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>--illegal-access=deny</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
